--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" type="text/css" href="home.css">
 </head>
@@ -44,6 +46,11 @@
  		</div>
  	</div>
  </div>
+
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/groups/OurRevMalden" class="fa fa-facebook"></a>
+<a href="https://twitter.com/OurMalden" class="fa fa-twitter"></a>
+<a href="mailto: outreachormalden@gmail.com" class="fa fa-google"></a>
 
  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
