--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -28,6 +28,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="platform.html">Platform</a></li>
         <li><a href="endorsements.html">Endorsements</a></li>
+        <li><a href="election_info.html">2021 Election Information</a></li>
         <li><a href="https://donorbox.org/ormalden">Donate</a></li>
       </ul>
     </div>
