expanded explanation of who is being elected

--- a/public_html_to_upload/election_info.html
+++ b/public_html_to_upload/election_info.html
@@ -46,13 +46,19 @@
 
     <div class="platform">
         <h2>Election date: Tuesday, November 2nd, 2021</h2>
-        <p>Find your voting location here</p>
+        <p><a href="https://maldengis.maps.arcgis.com/apps/webappviewer/index.html?id=c91aaae80a2147bc83f97a415e519225">Find your voting location</a></p>
 
         <h3>Who is being elected?</h3>
-        <p>In Malden, city councillors and school committee members are elected every two years.</p>
-        <p>These elections occur on odd years, between state and federal elections. This happened in 2017, 2019, and now in 2021.</p>
-        <p>Along with the mayor, the city council decides how Malden's government operates and how Malden's tax dollars are spent.</p>
-        <p>The school committee is a separate team of elected officials that are specifically tasked with overseeing Malden Public Schools.</p>
+        <ul>
+          <li>In Malden, city councillors and school committee members are elected every two years.</li>
+          <li>These elections occur on odd years, between state and federal elections. This happened in 2017, 2019, and now in 2021.</li>
+          <li>Along with the mayor, the city council decides how Malden's government operates and how Malden's tax dollars are spent.</li>
+          <li>The school committee is a separate team of elected officials that are specifically tasked with overseeing Malden Public Schools.</li>
+        </ul>
+        
+        <hr>
+        <p>Malden is made up of 8 Wards. Each ward will elect one city councillor and one school committee member to represent their area of Malden. Additionally, there are three 'At Large' city councillors, who are elected citywide.</p>
+        <p>So when you go to vote this fall, you will be able to select one choice for your ward councillor, one choice for your ward school committee member, and three choices for 'At Large' city councillors.</p>
 
         <h3>Voting by mail</h3>
         <h4>Yes! You can vote by mail this year!</h4>  
