added upcoming events to homepage

--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
- <nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -33,25 +33,55 @@
       </ul>
     </div>
   </div>
- </nav>
+</nav>
 
- <div class="container" id="main">
+<div class="container" id="main">
  	<div class="row">
  		<div class="col-lg-12">
- 			<div class="content">
- 				<h1>Our Revolution Malden</h1>
-        <h3>This is the homepage for the chapter of Our Revolution representing Malden, Massachusetts.</h3>
-        <h4>We are a municipal political action committee (MuniPAC) that advocates for the election of progressive politicians, and pushes for elected officials to enact progressive policies for our city.</h4>
- 				<hr>
- 			</div>
+      <div class="thumbnail">
+        <img src="images/photo_logo.jpg">
+      </div>
  		</div>
+    <div class="col-lg-12">
+      <div class="jumbotron">
+        <h3>This is the homepage for the chapter of Our Revolution representing Malden, Massachusetts.</h3>
+        <h4>We are a municipal political action committee (MuniPAC) that advocates for the election of progressive politicians, and pushes for elected officials to enact progressive policies for our city.</h4>     
+        <hr>
+      </div>
+    </div>
+    <div class="col-lg-12">
+      <div class="content">
+        <h2>Upcoming Events</h2>
+        <div class="events">
+          <h3>September 2021 General Meeting</h3>
+          <p>Thursday, Sept 16th, 7:00pm - 8:00pm</p>
+          <p>57 Mt Vernon Street, Malden MA 02148</p>
+          <p>Please join us for our September General Meeting! This is an in-person event, but we will also be supporting virtual attendees. For those that are interested in attending in person, we will be meeting at the address listed above. If you are attending in person, please be vaccinated or wear a mask (honor system).</p>
+          <p><a href="https://www.facebook.com/events/586778415827226?active_tab=about">Facebook event link</a></p>
+          <p><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fus02web.zoom.us%2Fj%2F3283246317%3Fpwd%3DS2JaeEhrdkJxOHFIT3d2VDV2TUlTdz09%26fbclid%3DIwAR38-6K5FDD-gd2g7DXJlFsFN0-i83_hmjTHFB4HdxCmPsS2MYbQBLvABOs&h=AT38wEjzoUr_d-cCrsa4cBZhfjuEhfE_SAi_B3eHyC8NjPyQQO50SW33-PFZajLWNxNlOZK0lXGnbI_ZoP6QaC_GkHIbu38fbgIjdZ45rh5IIRTu5omPZe0uaA&__tn__=q&c[0]=AT3KCzZt7z2qv31L1f6RgqVY0eBYi50Ek3OnMJmn1EZghi2svjSc87IA5QsLB-TYGvqpxdk4gVfH_9DZA4caq1rD-VcnCnZeNeXWmP1Z7J_fos6VTsHmSuOf9MH_pHreVSs">Zoom meeting link for virtual attendees</a></p>
+        </div>
+        <hr>
+        <div class="events">
+          <h3>Election Awareness Standout Series</h3>
+          <p>Every Tuesday, 5:30pm - 6:30pm</p>
+          <p>Malden Center Train Station, Malden, MA 02148</p>
+          <p>OR Malden is holding a series of Election Outreach events every Tuesday at Malden Center.</p>
+          <p>We will be getting the word out about this fall's municipal elections, as well as helping people get registered to vote and request mail-in ballots.</p>
+          <p>Following our endorsement process, these events will also feature us holding signs and engaging with voters in support of our endorsed candidates.</p>
+          <p>Please feel free to join us! All are welcome!</p>
+        </div>
+      </div>
+    </div>
  	</div>
- </div>
 
-<!-- Add font awesome icons -->
-<a href="https://www.facebook.com/groups/OurRevMalden" class="fa fa-facebook"></a>
-<a href="https://twitter.com/OurMalden" class="fa fa-twitter"></a>
-<a href="mailto: outreachormalden@gmail.com" class="fa fa-google"></a>
+  <!-- Add font awesome icons -->
+  <hr>
+  <a href="https://www.facebook.com/groups/OurRevMalden" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/OurMalden" class="fa fa-twitter"></a>
+  <a href="mailto: outreachormalden@gmail.com" class="fa fa-google"></a>
+</div>
+
+
 
  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
