added ward map to election info page

--- a/public_html_to_upload/election_info.html
+++ b/public_html_to_upload/election_info.html
@@ -46,9 +46,9 @@
 
     <div class="platform">
         <h2>Election date: Tuesday, November 2nd, 2021</h2>
-        <p><a href="https://maldengis.maps.arcgis.com/apps/webappviewer/index.html?id=c91aaae80a2147bc83f97a415e519225">Find your voting location</a></p>
+        
 
-        <h3>Who is being elected?</h3>
+        <h3>What is this election for?</h3>
         <ul>
           <li>In Malden, city councillors and school committee members are elected every two years.</li>
           <li>These elections occur on odd years, between state and federal elections. This happened in 2017, 2019, and now in 2021.</li>
@@ -58,7 +58,18 @@
         
         <hr>
         <p>Malden is made up of 8 Wards. Each ward will elect one city councillor and one school committee member to represent their area of Malden. Additionally, there are three 'At Large' city councillors, who are elected citywide.</p>
-        <p>So when you go to vote this fall, you will be able to select one choice for your ward councillor, one choice for your ward school committee member, and three choices for 'At Large' city councillors.</p>
+        <p>So when you go to vote this fall, you will be able to select one candidate for your ward councillor, one candidate for your ward school committee member, and three candidates for 'At Large' city councillors.</p>
+
+        <h3>Where do I go to vote in this election?</h3>
+        <p>Your voting location for municipal elections is the same as it is for federal and state elections.</p>
+        <p id="vote_by_mail">This year, you may also vote by mail. (See below)</p>
+        <p>A list of voting locations is provided here. Or, you can look up your polling location by following the link below.</p>
+        <div class="thumbnail">
+          <img src="images/2021_polling_locations.png">
+        </div>
+        <p><a href="https://maldengis.maps.arcgis.com/apps/webappviewer/index.html?id=c91aaae80a2147bc83f97a415e519225">Find your voting location</a></p>
+
+
 
         <h3>Voting by mail</h3>
         <h4>Yes! You can vote by mail this year!</h4>  
