--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -10,7 +10,7 @@
   <style>iframe {width:100%;height:100%;}</style>
 
 
-	<link rel="stylesheet" type="text/css" href="home.css">
+	<link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 <body>
 
