--- a/public_html_to_upload/platform.html
+++ b/public_html_to_upload/platform.html
@@ -8,7 +8,7 @@
   <!-- Add icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" type="text/css" href="platform.css">
+  <link rel="stylesheet" type="text/css" href="css/platform.css">
 </head>
 <body>
 
