added endorsement description

--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -40,7 +40,10 @@
     <div class="content">
         <h1>Endorsements</h1>
         <hr>
-        <p>Coming soon!</p>      
+        <p>Our Revolution Malden is committed to ensuring that our local government works for everyone, regardless of identity or class.</p>
+        <p>We built our platform on issues that are most important for our community now and into the future.</p>
+        <p>We believe that bold, progressive leadership is needed to strengthen our city and face the challenges of the day.</p>
+        <p>Our endorsed candidates have the experience and the vision needed to bring our platform to life and help Malden flourish.</p>      
       </div>
   </div>
 
