--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -47,78 +47,56 @@
       </div>
   </div>
 
-<!--     <div class="platform">
-        
-    </div> -->
-
-  <!-- <div class="col-lg-3 col-sm-3">
-    <div class="thumbnail">
-      <img src="images/lead_pipes_map.png">
+  <div class="container">
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>At Large: Karen Colon Hayes</h3>
+        <p><a href="https://www.karencolonhayes.com/">https://www.karencolonhayes.com/</a></p>
+      </div>
     </div>
-  </div> -->
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>At Large: Karen Colon Hayes</h3>
-      <p><a href="https://www.karencolonhayes.com/">https://www.karencolonhayes.com/</a></p>
+
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>At Large: Carey McDonald</h3>
+        <p><a href="https://mcdonaldformalden.com/">https://mcdonaldformalden.com/</a></p>
+      </div>
     </div>
-  </div>
 
-  <hr>
-
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>At Large: Carey McDonald</h3>
-      <p><a href="https://mcdonaldformalden.com/">https://mcdonaldformalden.com/</a></p>
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>Ward 3: Amanda Linehan</h3>
+        <p><a href="http://amandalinehan.org/">http://amandalinehan.org/</a></p>
+      </div>
     </div>
-  </div>
 
-  <hr>
-
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>Ward 3: Amanda Linehan</h3>
-      <p><a href="http://amandalinehan.org/">http://amandalinehan.org/</a></p>
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>Ward 5: Ari Taylor</h3>
+        <p><a href="https://ariformalden.com/">https://ariformalden.com/</a></p>
+      </div>
     </div>
-  </div>
 
-  <hr>
-
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>Ward 5: Ari Taylor</h3>
-      <p><a href="https://ariformalden.com/">https://ariformalden.com/</a></p>
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>Ward 6: Steve Winslow</h3>
+        <p><a href="https://winslowformalden.com/">https://winslowformalden.com/</a></p>
+      </div>
     </div>
-  </div>
 
-  <hr>
-
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>Ward 6: Steve Winslow</h3>
-      <p><a href="https://winslowformalden.com/">https://winslowformalden.com/</a></p>
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>Ward 7: Michelle Luong</h3>
+        <p><a href="https://michelleluong.com/">https://michelleluong.com/</a></p>
+      </div>
     </div>
-  </div>
 
-  <hr>
-
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>Ward 7: Michelle Luong</h3>
-      <p><a href="https://michelleluong.com/">https://michelleluong.com/</a></p>
+    <div class="col-lg-4 col-sm-4">
+      <div class="candidate">
+        <h3>Ward 8: Nate Bae Kupel</h3>
+        <p><a href="https://natebaekupel.com/">https://natebaekupel.com/</a></p>
+      </div>
     </div>
   </div>
-
-  <hr>
-
-  <div class="col-lg-12 col-sm-12">
-    <div class="policy">
-      <h3>Ward 8: Nate Bae Kupel</h3>
-      <p><a href="https://natebaekupel.com/">https://natebaekupel.com/</a></p>
-    </div>
-  </div>
-
-  <hr>
-
 
 
 
