added candidate photos to endorsement page

--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -51,6 +51,9 @@
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
         <h3>At Large: Karen Colon Hayes</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/karen_colon_hayes.jpg">
+        </div>
         <p><a href="https://www.karencolonhayes.com/">https://www.karencolonhayes.com/</a></p>
       </div>
     </div>
@@ -58,6 +61,9 @@
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
         <h3>At Large: Carey McDonald</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/carey_mcdonald.jpg">
+        </div>
         <p><a href="https://mcdonaldformalden.com/">https://mcdonaldformalden.com/</a></p>
       </div>
     </div>
@@ -65,6 +71,9 @@
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
         <h3>Ward 3: Amanda Linehan</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/amanda_linehan.jpg">
+        </div>
         <p><a href="http://amandalinehan.org/">http://amandalinehan.org/</a></p>
       </div>
     </div>
@@ -72,13 +81,19 @@
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
         <h3>Ward 5: Ari Taylor</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/ari_taylor.jpg">
+        </div>
         <p><a href="https://ariformalden.com/">https://ariformalden.com/</a></p>
       </div>
     </div>
 
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
-        <h3>Ward 6: Steve Winslow</h3>
+        <h3>Ward 6: Stephen Winslow</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/stephen_winslow.jpg">
+        </div>
         <p><a href="https://winslowformalden.com/">https://winslowformalden.com/</a></p>
       </div>
     </div>
@@ -86,6 +101,9 @@
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
         <h3>Ward 7: Michelle Luong</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/michelle_luong.jpg">
+        </div>
         <p><a href="https://michelleluong.com/">https://michelleluong.com/</a></p>
       </div>
     </div>
@@ -93,11 +111,13 @@
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
         <h3>Ward 8: Nate Bae Kupel</h3>
+        <div class="thumbnail">
+          <img src="images/candidate_endorsement_photos/nate_bae_kupel.jpg">
+        </div>
         <p><a href="https://natebaekupel.com/">https://natebaekupel.com/</a></p>
       </div>
     </div>
   </div>
-
 
 
 <!-- Add font awesome icons -->
