removed last months general meeting from homepage

--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -57,7 +57,7 @@
       </div>
   </div>
     
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-lg-6 col-sm-6">
       <div class="map">
         <iframe class="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.8331086931466!2d-71.06438498438477!3d42.431287138592985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e373d82cdf93cb%3A0xfc1bdba496a74139!2s57%20Mt%20Vernon%20St%2C%20Malden%2C%20MA%2002148!5e0!3m2!1sen!2sus!4v1631702308109!5m2!1sen!2sus">  
@@ -74,7 +74,7 @@
         <p><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fus02web.zoom.us%2Fj%2F3283246317%3Fpwd%3DS2JaeEhrdkJxOHFIT3d2VDV2TUlTdz09%26fbclid%3DIwAR38-6K5FDD-gd2g7DXJlFsFN0-i83_hmjTHFB4HdxCmPsS2MYbQBLvABOs&h=AT38wEjzoUr_d-cCrsa4cBZhfjuEhfE_SAi_B3eHyC8NjPyQQO50SW33-PFZajLWNxNlOZK0lXGnbI_ZoP6QaC_GkHIbu38fbgIjdZ45rh5IIRTu5omPZe0uaA&__tn__=q&c[0]=AT3KCzZt7z2qv31L1f6RgqVY0eBYi50Ek3OnMJmn1EZghi2svjSc87IA5QsLB-TYGvqpxdk4gVfH_9DZA4caq1rD-VcnCnZeNeXWmP1Z7J_fos6VTsHmSuOf9MH_pHreVSs">Zoom meeting link for virtual attendees</a></p>
       </div>
     </div>
-    <hr>
+    <hr> -->
     <div class="row">
       <div class="col-lg-6 col-sm-6">
         <div class="map">
