added event for ORMA candidate forum

--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -76,13 +76,13 @@
     </div>
     <hr> -->
     <div class="row">
-      <div class="col-lg-6 col-sm-6">
+      <div class="col-lg-4 col-sm-4">
         <div class="map">
           <iframe class="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11780.073605983005!2d-71.0742333!3d42.4273432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x53a832383f2e130c!2sMalden%20Center!5e0!3m2!1sen!2sus!4v1631702196193!5m2!1sen!2sus">  
           </iframe>
         </div>
       </div>
-      <div class="col-lg-6 col-sm-6">
+      <div class="col-lg-8 col-sm-8">
         <div class="events">
           <h3>Election Awareness Standout Series</h3>
           <p>Every Tuesday, 5:30pm - 6:30pm</p>
@@ -92,10 +92,29 @@
           <p>Following our endorsement process, these events will also feature us holding signs and engaging with voters in support of our endorsed candidates.</p>
           <p>Please feel free to join us! All are welcome!</p>
         </div>  
-  </div>
-    
-    
- 	</div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <div class="col-lg-4 col-sm-4">
+        <div class="thumbnail">
+          <img src="images/ORMA_logo.png">
+        </div>
+      </div>
+      <div class="col-lg-8 col-sm-8">
+        <div class="events">
+          <h3>ORMA Statewide Candidate Forum</h3>
+          <p>Sunday, Oct 17th, 7pm</p>
+          <p>--Zoom link to follow--</p>
+          <p>Our slate of endorsed candidates has also been endorsed by our parent organization, Our Revolution Massachusetts (ORMA).</p>
+          <p>ORMA is hosting a statewide Zoom candidate forum to get the word out about the endorsed campaigns happening around the state.</p>
+          <p>The call will be recruiting volunteers and donors to help bring our progressive vision to life.</p>
+          <p>Please join us! Zoom meeting details to be posted soon.</p>
+        </div>  
+      </div>
+    </div>
 
   <!-- Add font awesome icons -->
   <hr>
