added buttons to homepage to endorsements and platform

--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -49,6 +49,9 @@
         <h3>This is the homepage for the chapter of Our Revolution representing Malden, Massachusetts.</h3>
         <h4>We are a municipal political action committee (MuniPAC) that advocates for the election of progressive politicians, and pushes for elected officials to enact progressive policies for our city.</h4>     
         <hr>
+        <a class="btn btn-default btn-lg" href="endorsements.html"><span id="icons"><i class="fa fa-id-card"></i></span>Meet our candidates</a>
+        <hr>
+        <a class="btn btn-default btn-lg" href="platform.html"><span id="icons"><i class="fa fa-gavel"></i></span>Explore our platform of issues</a>
       </div>
     </div>
   <div class="row" id="upcoming_events">
