made endorsement photos into links

--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -52,7 +52,9 @@
       <div class="candidate">
         <h3>At Large: Karen Colon Hayes</h3>
         <div class="thumbnail">
+          <a href="https://www.karencolonhayes.com/">
           <img src="images/candidate_endorsement_photos/karen_colon_hayes.jpg">
+          </a>
         </div>
         <p><a href="https://www.karencolonhayes.com/">https://www.karencolonhayes.com/</a></p>
       </div>
@@ -62,7 +64,9 @@
       <div class="candidate">
         <h3>At Large: Carey McDonald</h3>
         <div class="thumbnail">
+          <a href="https://mcdonaldformalden.com/">
           <img src="images/candidate_endorsement_photos/carey_mcdonald.jpg">
+          </a>
         </div>
         <p><a href="https://mcdonaldformalden.com/">https://mcdonaldformalden.com/</a></p>
       </div>
@@ -72,7 +76,9 @@
       <div class="candidate">
         <h3>Ward 3: Amanda Linehan</h3>
         <div class="thumbnail">
+          <a href="http://amandalinehan.org/">
           <img src="images/candidate_endorsement_photos/amanda_linehan.jpg">
+          </a>
         </div>
         <p><a href="http://amandalinehan.org/">http://amandalinehan.org/</a></p>
       </div>
@@ -82,7 +88,9 @@
       <div class="candidate">
         <h3>Ward 5: Ari Taylor</h3>
         <div class="thumbnail">
+          <a href="https://ariformalden.com/">
           <img src="images/candidate_endorsement_photos/ari_taylor.jpg">
+          </a>
         </div>
         <p><a href="https://ariformalden.com/">https://ariformalden.com/</a></p>
       </div>
@@ -92,7 +100,9 @@
       <div class="candidate">
         <h3>Ward 6: Stephen Winslow</h3>
         <div class="thumbnail">
+          <a href="https://winslowformalden.com/">
           <img src="images/candidate_endorsement_photos/stephen_winslow.jpg">
+          </a>  
         </div>
         <p><a href="https://winslowformalden.com/">https://winslowformalden.com/</a></p>
       </div>
@@ -102,7 +112,9 @@
       <div class="candidate">
         <h3>Ward 7: Michelle Luong</h3>
         <div class="thumbnail">
+          <a href="https://michelleluong.com/">
           <img src="images/candidate_endorsement_photos/michelle_luong.jpg">
+          </a>
         </div>
         <p><a href="https://michelleluong.com/">https://michelleluong.com/</a></p>
       </div>
@@ -112,7 +124,9 @@
       <div class="candidate">
         <h3>Ward 8: Nate Bae Kupel</h3>
         <div class="thumbnail">
+          <a href="https://natebaekupel.com/">
           <img src="images/candidate_endorsement_photos/nate_bae_kupel.jpg">
+          </a>
         </div>
         <p><a href="https://natebaekupel.com/">https://natebaekupel.com/</a></p>
       </div>
