added downloadable flyer to endorsements page

--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -133,6 +133,19 @@
     </div>
   </div>
 
+  <hr>
+
+  <div class="col-lg-12 col-sm-12">
+    <div class="downloads">
+      <h3>Downloads</h3>
+      <div class="thumbnail">
+        <a href="downloads/Endorsed-Candidates-Flyer.pdf" download="OR-Malden-Endorsed-Candidates-Flyer.pdf">
+        <img src="images/endorsed-candidates-flyer-thumbnail.png">
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Add font awesome icons -->
 <a href="https://www.facebook.com/groups/OurRevMalden" class="fa fa-facebook"></a>
