added endorsement leaflet to downloads section

--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -149,6 +149,15 @@
       </div>
 
       <div class="col-lg-4 col-sm-4">
+        <h3>Endorsement Leaflet</h3>
+          <div class="thumbnail">
+            <a href="downloads/Endorsed_Candidates_Leaflet.pdf" download="OR_Malden_2021_Endorsement_Questionnaire_Responses.xlsx">
+            <img src="images/endorsed-candidates-leaflet-thumbnail.png">
+            </a>
+          </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-4">
         <h3>Candidate Endorsement Questionnaire Responses</h3>
           <div class="thumbnail">
             <a href="downloads/OR_Malden_2021_Endorsement_Questionnaire_Responses.xlsx" download="OR_Malden_2021_Endorsement_Questionnaire_Responses.xlsx">
