--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -151,7 +151,7 @@
       <div class="col-lg-4 col-sm-4">
         <h3>Endorsement Leaflet</h3>
           <div class="thumbnail">
-            <a href="downloads/Endorsed_Candidates_Leaflet.pdf" download="OR_Malden_2021_Endorsement_Questionnaire_Responses.xlsx">
+            <a href="downloads/Endorsed-Candidates-Leaflet.pdf" download="OR-Malden-Endorsed-Candidates-Leaflet.pdf">
             <img src="images/endorsed-candidates-leaflet-thumbnail.png">
             </a>
           </div>
