changed Stephen to Steve

--- a/public_html_to_upload/endorsements.html
+++ b/public_html_to_upload/endorsements.html
@@ -98,7 +98,7 @@
 
     <div class="col-lg-4 col-sm-4">
       <div class="candidate">
-        <h3>Ward 6: Stephen Winslow</h3>
+        <h3>Ward 6: Steve Winslow</h3>
         <div class="thumbnail">
           <a href="https://winslowformalden.com/">
           <img src="images/candidate_endorsement_photos/stephen_winslow.jpg">
