--- a/public_html_to_upload/home.html
+++ b/public_html_to_upload/home.html
@@ -60,25 +60,25 @@
       </div>
   </div>
     
-  <!-- <div class="row">
+  <div class="row">
     <div class="col-lg-6 col-sm-6">
       <div class="map">
-        <iframe class="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.8331086931466!2d-71.06438498438477!3d42.431287138592985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e373d82cdf93cb%3A0xfc1bdba496a74139!2s57%20Mt%20Vernon%20St%2C%20Malden%2C%20MA%2002148!5e0!3m2!1sen!2sus!4v1631702308109!5m2!1sen!2sus">  
+        <iframe class="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.964057428298!2d-71.0649036842402!3d42.42849993876873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37162a4b091a1%3A0x3e9290339a83169a!2s121%20Salem%20St%2C%20Malden%2C%20MA%2002148!5e0!3m2!1sen!2sus!4v1639147759535!5m2!1sen!2sus">  
         </iframe>
       </div>
     </div>
     <div class="col-lg-6 col-sm-6">
       <div class="events">
-        <h3>September 2021 General Meeting</h3>
-        <p>Thursday, Sept 16th, 7:00pm - 8:00pm</p>
-        <p>57 Mt Vernon Street, Malden MA 02148</p>
-        <p>Please join us for our September General Meeting! This is an in-person event, but we will also be supporting virtual attendees. For those that are interested in attending in person, we will be meeting at the address listed above. If you are attending in person, please be vaccinated or wear a mask (honor system).</p>
-        <p><a href="https://www.facebook.com/events/586778415827226?active_tab=about">Facebook event link</a></p>
+        <h3>December 2021 General Meeting</h3>
+        <p>Monday, Dec 13th, 7:00pm - 8:00pm</p>
+        <p>121 Salem Street, Malden MA 02148</p>
+        <p>Please join us for our December General Meeting! This is an in-person event, but we will also be supporting virtual attendees. For those that are interested in attending in person, we will be meeting at the address listed above. If you are attending in person, please be vaccinated or wear a mask (honor system).</p>
+        <p><a href="https://www.facebook.com/events/252962573567715?ref=newsfeed">Facebook event link</a></p>
         <p><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fus02web.zoom.us%2Fj%2F3283246317%3Fpwd%3DS2JaeEhrdkJxOHFIT3d2VDV2TUlTdz09%26fbclid%3DIwAR38-6K5FDD-gd2g7DXJlFsFN0-i83_hmjTHFB4HdxCmPsS2MYbQBLvABOs&h=AT38wEjzoUr_d-cCrsa4cBZhfjuEhfE_SAi_B3eHyC8NjPyQQO50SW33-PFZajLWNxNlOZK0lXGnbI_ZoP6QaC_GkHIbu38fbgIjdZ45rh5IIRTu5omPZe0uaA&__tn__=q&c[0]=AT3KCzZt7z2qv31L1f6RgqVY0eBYi50Ek3OnMJmn1EZghi2svjSc87IA5QsLB-TYGvqpxdk4gVfH_9DZA4caq1rD-VcnCnZeNeXWmP1Z7J_fos6VTsHmSuOf9MH_pHreVSs">Zoom meeting link for virtual attendees</a></p>
       </div>
     </div>
-    <hr> -->
-    <div class="row">
+    <!-- <hr> -->
+    <!-- <div class="row">
       <div class="col-lg-4 col-sm-4">
         <div class="map">
           <iframe class="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11780.073605983005!2d-71.0742333!3d42.4273432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x53a832383f2e130c!2sMalden%20Center!5e0!3m2!1sen!2sus!4v1631702196193!5m2!1sen!2sus">  
@@ -117,7 +117,7 @@
           <p>Please join us! Zoom meeting details to be posted soon.</p>
         </div>  
       </div>
-    </div>
+    </div> -->
 
   <!-- Add font awesome icons -->
   <hr>
